# cli_timer

./: CMakeLists.txt  README.md  add_tm2nowtm.c  add_tm2nowtm.h  cli_timer.c  cli_timer.h  fill_in_tm_from_str.c  fill_in_tm_from_str.h
tests/: CMakeLists.txt  test_add_tm2nowtm.cpp  test_fill_in_tm_from_str.cpp  time_tm_print.c
